--- a/style.css
+++ b/style.css
@@ -1,25 +1,22 @@
-/* Algemene opmaak */
 body {
   font-family: "Arial Black", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #222;
-  color: #fff;
   overflow: hidden;
+  color: #fff;
 }
 
-/* Header */
 header {
   background-color: #333;
   color: #ffea00;
-  text-align: center;
   padding: 7px 0;
-  position: relative; /* Maak de positie relatief voor het positioneren van de icoontjes */
+  position: relative;
+  text-align: center;
 }
 
-/* Titel */
 .title {
-  font-size: 48px; /* Zet de fontgrootte van het h1-element terug naar 48px */
+  font-size: 48px;
   margin: 0;
   padding: 20px;
   border-bottom: 3px solid #ffea00;
@@ -41,17 +38,15 @@ header {
   background-color: #c23616;
 }
 
-/* Informatie-icoontje */
 .info-icon {
   position: absolute;
   top: 50%;
-  right: 20px; /* Houd het icoontje aan de rechterkant */
+  right: 20px;
   transform: translateY(-50%);
   font-size: 24px;
   cursor: pointer;
 }
 
-/* Informatiebericht */
 .info-message {
   display: none;
   position: absolute;
@@ -64,12 +59,10 @@ header {
   font-size: 14px;
 }
 
-/* Hover-effect voor informatiebericht */
 .info-icon:hover + .info-message {
   display: block;
 }
 
-/* Container */
 .container {
   display: flex;
   align-items: flex-start;
@@ -77,7 +70,6 @@ header {
   padding: 20px;
 }
 
-/* Categorieën */
 .category {
   background-color: #444;
   margin-bottom: 20px;
@@ -92,7 +84,6 @@ header {
   color: #ffea00;
 }
 
-/* Knoppen */
 .button {
   display: block;
   margin-bottom: 15px;
@@ -110,7 +101,6 @@ header {
   background-color: #ff6c00;
 }
 
-/* Hamburgercontainer */
 .hamburger-container {
   text-align: center;
 }
@@ -120,7 +110,6 @@ header {
   padding: 50px;
 }
 
-/* Toppings */
 .toppings {
   display: flex;
   flex-wrap: wrap;
@@ -139,43 +128,31 @@ header {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
 }
 
-.ham-btn,
 .rund-btn,
-.kip-btn,
 .tomaat-btn,
 .sla-btn,
 .kaas-btn,
-.bacon-btn,
 .augurk-btn,
-.ui-btn,
-.ketchup-btn,
-.mayonaise-btn,
-.mosterd-btn {
+.ketchup-btn{
   background-color: #c23616;
   color: #fff;
   border-radius: 25px;
   padding: 10px;
 }
 
-.ham-btn:hover,
 .rund-btn:hover,
-.kip-btn:hover,
 .tomaat-btn:hover,
 .sla-btn:hover,
 .kaas-btn:hover,
-.bacon-btn:hover,
 .augurk-btn:hover,
-.ui-btn:hover,
-.ketchup-btn:hover,
-.mayonaise-btn:hover,
-.mosterd-btn:hover {
+.ketchup-btn:hover{
   background-color: #780d04;
 }
 
 .info-message {
-  background-color: #333; 
-  color: #fff; 
+  background-color: #333;
+  color: #fff;
   border-radius: 8px;
-  font-size: 16px; 
+  font-size: 16px;
   width: 200px;
 }
